# PSV-generator

./: .gitignore  README.md  main.py
_app/src/: button_handler.rs  command_handler.rs
app/: Cargo.toml
app/src/: button_handler.rs  command_handler.rs  commands.rs  custom_error_handler.rs  edit.rs  error_handler.rs  errors.rs  main.rs  menu_buttons.rs  menu_ui.rs  patience.rs  start.rs  test_patience.rs  tg_contact.rs
app/src/menu/: buttons.rs  edit.rs  mod.rs  ui.rs
app/src/patience/: buttons.rs  mod.rs  patience.rs  ui.rs
app/src/start/: message.rs
app/src/structs/: mod.rs  patience.rs  tg_contact.rs
db/: Cargo.toml
db/src/: main.rs
logging/: Cargo.toml  README.md
logging/src/: logging_config.rs  main.rs
patience/: Cargo.toml
patience/src/: lib.rs  main.rs  patience.rs  settings.rs  test_patience.rs
