[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# patience script
colored = "2.1.0"
rand = "0.8.5"
shuffle = "0.1.7"

# tg_bot
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv_codegen = "0.15.0"

