[package]
name = "patience"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "patience_lib"
path = "src/lib.rs"


[dependencies]
colored = "2.1.0"
rand = "0.8.5"
shuffle = "0.1.7"

# local imports
logging = { path = "../logging" }
